# ultimate-task-manager

./: Acceptance_Test_and_Acceptance_Criteria.md  Cargo.toml  Component_Diagram.drawio  DESIGN.md  Delta_Design_and_ Implementation.md  Deployment_Overview.md  Product_Assurance_Document.docx  Proje__Kontrol_Listesi_481 (1).xlsx  Project Definition Document.md  Project Plan Document.md  Quality Assurance Plan  Quality_Assurance_Plan.md  README.md  Sequence_Diagram.md  Sprint Backlog.xlsx  Test_Results_Report.md  UTiM_SRVD_v2.xlsx  classdiagram.md
assets/: tailwind.css
src/: main.rs  models.rs
src/business_logic/: calendar_utils.rs  mod.rs  save_data_builder.rs  todo_factory.rs  todo_operations.rs
src/data/: file_storage.rs  mod.rs  save_manager.rs  web_storage.rs
src/presentation/: mod.rs
src/presentation/components/: calendar_day.rs  importance_selector.rs  language_toggle.rs  mod.rs  modals.rs  tree_node.rs
src/presentation/pages/: calendar.rs  home.rs  login.rs  mod.rs  options.rs  tasks.rs
